fix: title and location mobile alignment

--- a/apps/site/src/views/Schedule/sections/ClipboardSchedule/ClipboardSchedule.module.scss
+++ b/apps/site/src/views/Schedule/sections/ClipboardSchedule/ClipboardSchedule.module.scss
@@ -42,3 +42,11 @@
 .eventTitle {
 	font-size: 24px;
 }
+
+.mobileLocation {
+	text-align: left;
+
+	@include bootstrap.media-breakpoint-up(lg) {
+		text-align: right;
+	}
+}
